Updating style changing background colour

--- a/dev.html
+++ b/dev.html
@@ -7,6 +7,7 @@
     
     <!-- CSS -->
     <link rel="stylesheet" href="work.css" />
+    <script src="script.js"></script>
 
     <!-- Bootstrap -->
     <link
@@ -32,19 +33,47 @@
   </head>
 
   <body>
-    <!-- Navbar -->
-    <div class="container">
-      <nav class="d-flex justify-content-between align-items-center">
-        <img src="" />
-        <ul class="nav-links">
-          <li><a href="index.html">Homepage</a></li>
-          <li><a href="about.html">About Me</a></li>
-          <li><a href="work.html">Projects</a></li>
-          <li class="active"><a href="dev.html">In development</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+     <video autoplay muted loop playsinline class="background-video">
+  <source src="background.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+
+
+   <!-- Navbar -->
+<nav id="mainNav" class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Dawn-Louise Hughes</a>
+    
+    <!-- Hamburger button for small screens -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Homepage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="dev.html">In development</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
     </div>
+  </div>
+</nav>
+
 
     <!-- Projects Section -->
     <section class="container my-5">
