--- a/work.html
+++ b/work.html
@@ -6,6 +6,7 @@
   <title>Dawn-Louise Hughes - Projects</title>
 
   <link rel="stylesheet" href="work.css" /> <!-- reuse your CSS for navbar/footer -->
+  <script src="script.js"></script>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -22,19 +23,35 @@
 </head>
 <body>
 
+ <video autoplay muted loop playsinline class="background-video">
+  <source src="background.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+
   <!-- Navbar -->
+  <nav id="mainNav" class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
   <div class="container">
-    <nav class="d-flex justify-content-between align-items-center py-3">
-      <img src="" />
-      <ul class="nav-links">
-        <li><a href="index.html">Homepage</a></li>
-        <li><a href="about.html">About Me</a></li>
-        <li class="active"><a href="work.html">Projects</a></li>
-        <li><a href="dev.html">In Development</a></li>
-        <li><a href="contact.html">Contact</a></li>
+    <a class="navbar-brand" href="index.html">Dawn-Louise Hughes</a>
+
+    <!-- Hamburger button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active"><a class="nav-link" href="index.html">Homepage</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
+        <li class="nav-item"><a class="nav-link" href="work.html">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="dev.html">In development</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
-    </nav>
+    </div>
   </div>
+</nav>
 
   <!-- Projects Header -->
   <h3 class="text-center my-5">Featured Projects I Have Worked On</h3>
@@ -160,23 +177,35 @@
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer>
-    <div class="d-flex justify-content-center mb-5">
-      <a href="mailto:dawnhughesnow@gmail.com" class="email-link">dawnhughesnow@gmail.com</a>
-    </div>
+     <!-- Footer -->
+    <footer>
+      <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:dawnhughesnow@gmail.com" class="email-link">
+          dawnhughesnow@gmail.com
+        </a>
+      </div>
 
-    <div class="social-links d-flex justify-content-center mb-5">
-      <a href=""><i class="fa-brands fa-instagram fa-lg" style="color: rgb(41, 37, 37)"></i></a>
-      <a href=""><i class="fa-brands fa-linkedin fa-lg" style="color: rgb(41, 37, 37)"></i></a>
-      <a href="https://github.com/FedDawb"><i class="fa-brands fa-github fa-lg" style="color: rgb(41, 37, 37)"></i></a>
-    </div>
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-instagram fa-lg"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/dawn-hughes-a033922b2/" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-linkedin fa-lg"></i>
+        </a>
+        <a href="https://github.com/FedDawb" target="_blank" rel="noopener noreferrer">
+          <i class="fa-brands fa-github fa-lg"></i>
+        </a>
+      </div>
 
-    <p class="text-center mt-5">
-      This site was coded by Dawn-Louise Hughes and is open-sourced on 
-      <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank">Github</a>
-    </p>
-  </footer>
+      <p class="text-center mt-5">
+        This site was coded by Dawn-Louise Hughes and is open-sourced on
+        <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank">
+          GitHub
+        </a>
+      </p>
+    </footer>
+  </body>
+</html>
 
 </body>
 </html>
