--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="about.css" />
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,19 +29,48 @@
     ></script>
   </head>
   <body>
-    <!-- Navbar -->
-    <div class="container">
-      <nav class="d-flex justify-content-between align-items-center">
-  <img src="" />
-  <ul class="nav-links">
-    <li><a href="index.html">Homepage</a></li>
-    <li class="active"><a href="about.html">About Me</a></li>
-    <li><a href="work.html">Projects</a></li>
-    <li><a href="dev.html">In development</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</nav>
+
+    <div class="page-video-bg">
+  <video autoplay muted loop playsinline>
+    <source src="background.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+
+  <!-- Navbar -->
+<nav id="mainNav" class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Dawn-Louise Hughes</a>
+    
+    <!-- Hamburger button for small screens -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Homepage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="dev.html">In development</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
     </div>
+  </div>
+</nav>
+
 
     <!-- About Me Section -->
     <section class="about-section container">
