--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="contact.css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="index.js"></script> 
+
 
   <!-- Bootstrap -->
   <link
@@ -30,21 +33,29 @@
 </head>
 <body>
 
+
   <!-- Navbar -->
-  <header>
-    <div class="container">
-      <nav class="d-flex justify-content-between align-items-center py-3">
-        <img src="" />
-        <ul class="nav-links d-flex list-unstyled mb-0">
-          <li class="me-3"><a href="index.html">Homepage</a></li>
-          <li class="me-3"><a href="about.html">About Me</a></li>
-          <li class="me-3"><a href="work.html">Projects</a></li>
-          <li class="me-3"><a href="dev.html">In Development</a></li>
-          <li class="active"><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Dawn-Louise Hughes</a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active"><a class="nav-link" href="index.html">Homepage</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
+        <li class="nav-item"><a class="nav-link" href="work.html">Projects</a></li>
+        <li class="nav-item"><a class="nav-link" href="dev.html">In Development</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+      </ul>
     </div>
-  </header>
+  </div>
+</nav>
+
 
   <!-- Main content -->
   <main class="flex-grow-1">
@@ -58,16 +69,25 @@
       <p>For collaborations and projects, please contact me below.</p>
      
     </section>
-  </main>
-  <section class="contact-info py-5 bg-white text-center">
-  <div class="container">
+ 
+  <section class="contact-info py-5 text-center position-relative">
+  <!-- Background video -->
+  <video autoplay muted loop playsinline class="background-video">
+    <source src="background.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <!-- Content on top of the video -->
+  <div class="container position-relative">
     <h1 class="mb-5">Get In Touch</h1>
     <p>I would love to hear from you!</p>
-    <a href="mailto:dawnhughesnow@gmail.com" class="btn-contact">Contact Me</a>
+     <a href="mailto:dawnhughesnow@gmail.com" class="btn-contact">Contact Me</a>
     <a href="assets/DawnHughes-Resume.pdf" target="_blank" class="btn-contact">View Resume</a>
-
+ 
   </div>
-</section>
+  </section>
+  </main>
+ 
 
   <!-- Footer -->
   <footer>
@@ -86,6 +106,7 @@
         <a href="https://github.com/FedDawb/Portfolio-Challenge" target="_blank" class="text-decoration-underline text-white">GitHub</a>
       </p>
     </div>
+    
   </footer>
 
   <!-- Bootstrap JS -->
