--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dawn-Louise Hughes - Projects</title>
-  <link rel="stylesheet" href="style.css" />
+  
   <link rel="stylesheet" href="about.css" />
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,19 +17,46 @@
 </head>
 <body>
 
+  <video autoplay muted loop playsinline class="background-video">
+  <source src="smallscreen.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+
+
 <!-- Navbar -->
-<div class="container">
-  <nav class="d-flex justify-content-between align-items-center">
-    <img src="" alt="Logo" />
-    <ul class="nav-links">
-      <li><a href="index.html">Homepage</a></li>
-      <li><a href="about.html">About Me</a></li>
-      <li class="active"><a href="work.html">Projects</a></li>
-      <li><a href="dev.html">In development</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Dawn-Louise Hughes</a>
+    
+    <!-- Hamburger button for small screens -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Navbar links -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Homepage</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="dev.html">In development</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 
 <!-- Projects Section -->
 <section class="projects-section container my-5">
