--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
         <div class="col-md-6 text-center">
           <img
             class="profile-image"
-            src="img/dawn.png"
+            src="img/dawn2.png"
             alt="Picture of Dawn"
           />
         </div>
