--- a/dev.html
+++ b/dev.html
@@ -1,38 +1,40 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dawn-Louise Hughes - In Development Projects</title>
-    
-    <!-- CSS -->
     <link rel="stylesheet" href="work.css" />
-    <script src="script.js"></script>
+    <!-- Your other scripts -->
+   <script src="index.js"></script>
 
-    <!-- Bootstrap -->
+
+
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    
-    <!-- Google Fonts -->
+    <title>Dawn-Louise Hughes- Front End Developer</title>
+      <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
       rel="stylesheet"
     />
-
-    <!-- FontAwesome -->
+     <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/030f0a908c.js" crossorigin="anonymous"></script>
     <script
-      src="https://kit.fontawesome.com/030f0a908c.js"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-  </head>
+    </head>
+    <body>
 
-  <body>
+
      <video autoplay muted loop playsinline class="background-video">
   <source src="background.mp4" type="video/mp4">
   Your browser does not support the video tag.
