Adjusting devlopment page and adding thumnailpic

--- a/dev.html
+++ b/dev.html
@@ -134,7 +134,7 @@
         <div class="project-description">
           <h3>Food App</h3>
           <p>
-            This project is an ongoing project thats aim is to improve the user interface of my previous website. Intergrate voice input.
+            This project is an ongoing project. The aim is to improve the user interface of my previous website of the same conceptand and to intergrate voice input.
           </p>
           <a href="https://foodsion.netlify.app/" target="_blank" class="btn btn-branding">Try it out</a>
           <a href="https://github.com/FedDawb/foodapp" target="_blank" class="btn btn-outline-dark mt-2">View on GitHub</a>
